[package]
name = "profont"
description = "The ProFont monospace font for use with the embedded-graphics crate."
version = "0.4.0"
authors = ["Wesley Moore <wes@wezm.net>"]

documentation = "https://docs.rs/profont"
repository = "https://github.com/wezm/profont"

readme = "README.md"
license = "MIT"

keywords = ["bitmap", "monochrome", "font", "monospace"]
categories = ["rendering", "embedded", "no-std"]

[dependencies]
embedded-graphics = "0.6"

font-kit = { version = "0.10", optional = true }
euclid = { version = "0.19", optional = true }
clap = { version = "2.33.3", optional = true }
image = { version = "0.20", optional = true, default-features = false, features = ["png_codec"] }
pathfinder_geometry = { version = "0.5.1", optional = true }

[features]
default = []
exe = ["font-kit", "euclid", "clap", "image", "pathfinder_geometry" ]
