[package]
name = "profont-tools"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
image = { version = "0.24",  default-features = false, features = ["png"] }
num-iter = { version = "0.1.42" }
embedded-graphics = "0.8.0"
embedded-graphics-simulator = { version = "0.5.0" }
pico-args = { version = "0.5.0" }
profont = { path = "../font" }

[dependencies.allsorts]
# 0.13.0 bumps MSRV beyond the MSRV of embedded-graphics (1.61.0)
version = "<0.13.0"
default-features = false
features = ["flate2_rust"]

[[bin]]
name = "profont"
path = "src/main.rs"
